<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Discover Cluj</string>
    <string name="title_text">Discover\nCluj Napoca</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="search_button">search_button</string>
    <string name="exit_button">exit_button</string>

    <string name="open_app_settings">Open Discover Cluj Settings in your phone.</string>
    <string name="open_settings_button">+</string>
    <string name="title_beautify">Chestie deasupra titlului</string>
    <string name="settings_About">About</string>
    <string name="settings_Version">Version</string>
    <string name="settings_set">Settings</string>

    <string name="location_first_label">Name:</string>
    <string name="location_second_label">Address:</string>
</resources>
