<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cluj_1_cut"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/exit_image_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exit_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_image_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/magnifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="296dp"
        android:layout_height="145dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="@color/title_colour"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/title_border"
        app:layout_constraintBottom_toTopOf="@+id/title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/image_button_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="45dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_button_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_2"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_button_1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_button_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_3"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_button_4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_4"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/connect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_button_3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image_button_5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_5"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>